# pyCAFE

./: CITATION.cff  LICENSE  README.md  pyCAFE_test.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: advanced_config.py  basic_usage.py  benchmark_cpu_vs_gpu.py
paper/: paper.bib  paper.md
pyCAFE/: __init__.py  benchmark.py  cli.py  clustering.py  core.py  extraction.py  pipelines.py  utils.py
tests/: __init__.py  test_basic.py
